plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.15'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'petition'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {

	//S3 이미지
	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.281'

	//redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"

	//jwt
	implementation("io.jsonwebtoken:jjwt:0.9.1")

	//swagger
	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'

	//비밀번호 암호화
	implementation 'org.springframework.boot:spring-boot-starter-security'

	//queryDSL
	implementation 'com.querydsl:querydsl-jpa'
	annotationProcessor(
			"javax.persistence:javax.persistence-api",
			"javax.annotation:javax.annotation-api",
			"com.querydsl:querydsl-apt:5.0.0:jpa")


	//기본
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
}



jar {
	enabled = false
}

tasks.named('test') {
	useJUnitPlatform()
}
